tests/basics/tstring_operations.py.exp

=== Binary operations ===
Template+str: can only concatenate string.templatelib.Template (not "str") to string.templatelib.Template
str+Template: can only concatenate str (not "string.templatelib.Template") to str
int+Template: TypeError
-: unsupported
*: unsupported
/: unsupported
%: unsupported
**: unsupported
&: unsupported
|: unsupported
^: unsupported
<<: unsupported
>>: unsupported

=== Edge cases ===

=== Template.__add__ with multiple interpolations ===
Template.__add__: OK (40 interpolations)

=== Single closing brace ===

=== Template + non-string object ===
Template + custom object: TypeError (correct)

=== 2-tuple constructor overflow ===
